Fixed compiler errors.